--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html {
 
   .container{
     display: flex;
+    justify-content: center;
   }
 
   .calc{
@@ -22,13 +23,27 @@ html {
   }
 
   .calcNumbers {
+    display: flex;
     border: 1px solid green;
     margin: 15px;
-    padding: 30px;
+    padding: 10px;
+    width: 300px;
+    height: 300px;
+    align-items: flex-start;
+    gap: 10px;
+    flex-wrap: wrap;
+  }
+
+  .numBut {
+    width: 70px;
+    height: 70px;
+
   }
 
   .calcOperators {
     border: 1px solid yellow;
     margin: 15px;
+    width: 150px;
+    height: 300px;
   }
 
